@@ -1,8 +1,8 @@
 Package: roger
 Type: Package
 Title: Automated Grading of R Scripts
-Version: 1.3-0
-Date: 2022-10-31
+Version: 1.3-1
+Date: 2022-11-19
 Authors@R: c(person("Vincent", "Goulet", role = c("aut", "cre"),
                     email = "vincent.goulet@act.ulaval.ca"),
              person("Samuel", "Fréchette", role = "aut"),
@@ -23,11 +23,11 @@ URL: https://roger-project.gitlab.io
 BugReports: https://gitlab.com/roger-project/roger-rpkg/-/issues
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2022-11-01 01:55:59 UTC; vincent
+Packaged: 2022-11-19 17:07:15 UTC; vincent
 Author: Vincent Goulet [aut, cre],
   Samuel Fréchette [aut],
   Jean-Christophe Langlois [aut],
   Jim Hester [ctb]
 Maintainer: Vincent Goulet <vincent.goulet@act.ulaval.ca>
 Repository: CRAN
-Date/Publication: 2022-11-01 03:54:59 UTC
+Date/Publication: 2022-11-19 19:50:02 UTC
