@@ -1,7 +1,7 @@
-0347e8ded4c158e8aa06f40aad7e7b82 *DESCRIPTION
+45e4ddcba144c2c2000d97a3bdc4c1c4 *DESCRIPTION
 a4f0025075fdbcd184f886eebfc1da71 *NAMESPACE
 642b3e4f9becc130b86fa61fe1f2dd8d *R/assignment_style.R
-660382037c6692b7370fce43c6630050 *R/commas_style.R
+a60e388b7a25a83a6be7f6647252d8cb *R/commas_style.R
 5c0f19570f229a6edfbaf4d6d5d8d95f *R/comments_style.R
 8a27aef96166944a290d84fe66927cf1 *R/curly_braces_style.R
 85d9770f908efb6ace54a030e28b970b *R/documentation.R
@@ -17,11 +17,11 @@ f504a1c3c9b39b7d474473302390bc5b *R/square_brackets_style.R
 a3cdf19aca0f91ed15b538aae1eb8472 *R/trailing_blank_lines_style.R
 920c0ca600a041352ee5fa8524b8a699 *R/trailing_whitespace_style.R
 25d012abdf778a3c073d39039b36dcce *R/unneeded_concatenation_style.R
-4187240b2eb9e4cbfc765fe0cb497f0a *inst/NEWS.Rd
-3fb811a3805d577143ba6ac2c44bf51a *inst/po/en@quot/LC_MESSAGES/R-roger.mo
-1d65d59abf446ad365e95da5910c4bd9 *inst/po/fr/LC_MESSAGES/R-roger.mo
+614d02ec47b49cf55b9a93f684236836 *inst/NEWS.Rd
+ed7908a896a6c89bd943494e340b0bbb *inst/po/en@quot/LC_MESSAGES/R-roger.mo
+0ffeae42926cb347db228721490c6009 *inst/po/fr/LC_MESSAGES/R-roger.mo
 99842f5b245cd2d2eac841e6cbe84497 *man/assignment_style.Rd
-9eb20d59915800295c0a094a76e7e716 *man/commas_style.Rd
+9f1c2f184ed4721d619067dc6d314bdf *man/commas_style.Rd
 fe050ef232f6edf169e2f4613bdea3ad *man/comments_style.Rd
 41dbfc28dd734cc81f850cc9d1cb0f8c *man/curly_braces_style.Rd
 5285463f474335f89dc8cf6dc8538fb2 *man/documentation.Rd
@@ -35,10 +35,10 @@ fe5268e48634c9d7b2aaa48a303f702e *man/square_brackets_style.Rd
 6778581051dc8744e9adf4187ae459f7 *man/trailing_blank_lines_style.Rd
 3de2a1ec820f84fff1e1d97822441ebd *man/trailing_whitespace_style.Rd
 a778686c3486c28a48cd32a454bd96ca *man/unneeded_concatenation_style.Rd
-02a421d1bc71f3d7f8a42fe40f6ac475 *po/R-fr.po
-89d5d68834ca307851e25952dc20097f *po/R-roger.pot
+f39ad237cf7253bafb506a123644fe7e *po/R-fr.po
+50d98304a60bbb232ef3ddd345314604 *po/R-roger.pot
 b5ea451a752a1b1f09c229e24e5f9904 *tests/documentation-tests.R
 2843511ce8d693a1bd2d2150c61aca74 *tests/getParseFun-tests.R
 5a8b407c242d7dafbf772921522561e5 *tests/getParseParent-tests.R
 8936a9f8817879adbe002a5d4a490d48 *tests/interface-tests.R
-354b450cbf63498852cf2aaa2096b810 *tests/style-tests.R
+2855c29cad923e6ff29980dc1080c9fd *tests/style-tests.R
